--- a/.github/workflows/p0c1-verify.yml
+++ b/.github/workflows/p0c1-verify.yml
@@ -20,7 +20,7 @@ jobs:
       ROLLS: "50"
       CMD: "python -m crapssim_control.cli"
       CSC_DEBUG: "0"
-      CSC_SKIP_VALIDATE: "1"   # skip validation to isolate runtime invariance
+      CSC_SKIP_VALIDATE: "1"
     steps:
       - name: Checkout (full history)
         uses: actions/checkout@v4
@@ -38,7 +38,7 @@ jobs:
         with:
           python-version: "3.11"
 
-      # Install engine once (HEAD), record exact version, and freeze the spec file
+      # Install engine once (from HEAD), record exact version, and freeze the spec file
       - name: Pin engine version and freeze spec
         id: pin
         run: |
@@ -103,9 +103,9 @@ PY
           # run without flags
           $CMD run "/tmp/p0c1/spec.json" --seed "$SEED" --rolls "$ROLLS" > baselines/p0c1/after/out_noflags.txt 2>&1
           grep '^RESULT:' baselines/p0c1/after/out_noflags.txt > baselines/p0c1/after/result_noflags.txt
-          # run with inert flags (+ optional RNG audit text which we ignore)
+          # run with inert flags
           $CMD run "/tmp/p0c1/spec.json" --seed "$SEED" --rolls "$ROLLS" \
-            --demo-fallbacks --strict --no-embed-analytics --rng-audit \
+            --demo-fallbacks --strict --no-embed-analytics \
             > baselines/p0c1/after/out_flags.txt 2>&1
           grep '^RESULT:' baselines/p0c1/after/out_flags.txt > baselines/p0c1/after/result_flags.txt
           # compare ONLY the RESULT lines (ignore other stdout diffs)
