--- a/.github/workflows/p0c1-verify.yml
+++ b/.github/workflows/p0c1-verify.yml
@@ -2,12 +2,12 @@ name: P0C1 - Inert Flag Framework Verification
 
 on:
   push:
-    branches: [ "**" ]
+    branches: ["**"]
     paths:
       - "crapssim_control/**"
-      - ".github/workflows/p0c1-verify.yml"
+      - ".github/workflows/verify.yml"
   pull_request:
-    branches: [ "**" ]
+    branches: ["**"]
   workflow_dispatch:
 
 jobs:
@@ -30,8 +30,8 @@ jobs:
       - name: Resolve SHAs
         id: shas
         run: |
-          echo "HEAD_SHA=$(git rev-parse HEAD)" >> $GITHUB_OUTPUT
-          echo "PREV_SHA=$(git rev-parse HEAD^)" >> $GITHUB_OUTPUT
+          echo "HEAD_SHA=$(git rev-parse HEAD)" >> "$GITHUB_OUTPUT"
+          echo "PREV_SHA=$(git rev-parse HEAD^)" >> "$GITHUB_OUTPUT"
 
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -45,18 +45,14 @@ jobs:
           set -e
           python -m pip install -U pip
           pip install "crapssim>=0.3.0" "PyYAML>=6.0"
-          ver=$(python - <<'PY'
-import importlib.metadata as m
-print(m.version("crapssim"))
-PY
-)
-          echo "CRAPSSIM_VERSION=$ver" >> $GITHUB_OUTPUT
+          ver=$(python -c 'import importlib.metadata as m; print(m.version("crapssim"))')
+          echo "CRAPSSIM_VERSION=$ver" >> "$GITHUB_OUTPUT"
           mkdir -p /tmp/p0c1
           cp "$SPEC_PATH" /tmp/p0c1/spec.json
 
       # ---------- BEFORE: HEAD^ ----------
       - name: Checkout previous commit (baseline)
-        run: git checkout ${{ steps.shas.outputs.PREV_SHA }}
+        run: git checkout "${{ steps.shas.outputs.PREV_SHA }}"
 
       - name: Install dependencies (baseline, pinned engine)
         run: |
@@ -70,13 +66,13 @@ PY
           set -e
           mkdir -p baselines/p0c1/before
           export PYTHONHASHSEED=0
-          export CSC_FORCE_SEED=$SEED
+          export CSC_FORCE_SEED="$SEED"
           $CMD run "/tmp/p0c1/spec.json" --seed "$SEED" --rolls "$ROLLS" > baselines/p0c1/before/out.txt 2>&1
           grep '^RESULT:' baselines/p0c1/before/out.txt > baselines/p0c1/before/result.txt
 
       # ---------- AFTER: HEAD ----------
       - name: Checkout current commit (candidate)
-        run: git checkout ${{ steps.shas.outputs.HEAD_SHA }}
+        run: git checkout "${{ steps.shas.outputs.HEAD_SHA }}"
 
       - name: Install dependencies (candidate, pinned engine)
         run: |
@@ -90,7 +86,7 @@ PY
           set -e
           mkdir -p baselines/p0c1/after
           export PYTHONHASHSEED=0
-          export CSC_FORCE_SEED=$SEED
+          export CSC_FORCE_SEED="$SEED"
           $CMD run "/tmp/p0c1/spec.json" --seed "$SEED" --rolls "$ROLLS" > baselines/p0c1/after/out.txt 2>&1
           grep '^RESULT:' baselines/p0c1/after/out.txt > baselines/p0c1/after/result.txt
 
@@ -99,15 +95,18 @@ PY
         run: |
           set -e
           export PYTHONHASHSEED=0
-          export CSC_FORCE_SEED=$SEED
+          export CSC_FORCE_SEED="$SEED"
+
           # run without flags
           $CMD run "/tmp/p0c1/spec.json" --seed "$SEED" --rolls "$ROLLS" > baselines/p0c1/after/out_noflags.txt 2>&1
           grep '^RESULT:' baselines/p0c1/after/out_noflags.txt > baselines/p0c1/after/result_noflags.txt
-          # run with inert flags
+
+          # run with inert flags (must not change RESULT)
           $CMD run "/tmp/p0c1/spec.json" --seed "$SEED" --rolls "$ROLLS" \
             --demo-fallbacks --strict --no-embed-analytics \
             > baselines/p0c1/after/out_flags.txt 2>&1
           grep '^RESULT:' baselines/p0c1/after/out_flags.txt > baselines/p0c1/after/result_flags.txt
+
           # compare ONLY the RESULT lines (ignore other stdout diffs)
           diff -u baselines/p0c1/after/result_noflags.txt baselines/p0c1/after/result_flags.txt
 
