--- a/docs/CSC_SNAPSHOT.yaml
+++ b/docs/CSC_SNAPSHOT.yaml
@@ -1,11 +1,28 @@
-phase: 0
-checkpoint: 3
-status: complete
-branch: phase0-safeguards
-tag: v0.29.0-phase0c3-baseline
-next_phase: 1
-next_checkpoint: 0
-last_action: baseline verification and CI guardrails added
+phase: 1
+checkpoint: 0
+status: pending
+branch: phase1-defaults
+previous_tag: v0.29.0-phase0c3-baseline
+next_tag: v0.29.1-phase1-preflight
+goal: Transition from prototype-safe to production-safe defaults.
+last_action: Phase 0 baseline verified and tagged.
 ci_status: green
 agent_mode: true
 docs_version: 2025-10-16
+next_checkpoint: 1
+checkpoints:
+  - id: P1C1
+    title: Disable demo fallbacks by default
+    risk: low
+  - id: P1C2
+    title: Add CLI flags (--demo-fallbacks, --strict)
+    risk: low
+  - id: P1C3
+    title: Embed validation_engine metadata
+    risk: low
+  - id: P1C4
+    title: Dual-mode demo verification
+    risk: medium
+  - id: P1C5
+    title: Phase 1 preflight tag & docs sync
+    risk: none
