--- a/docs/CSC_SNAPSHOT.yaml
+++ b/docs/CSC_SNAPSHOT.yaml
@@ -1,19 +1,20 @@
 phase: 1
-checkpoint: 0
-status: pending
+checkpoint: 1
+status: active
 branch: phase1-defaults
 previous_tag: v0.29.0-phase0c3-baseline
 next_tag: v0.29.1-phase1-preflight
 goal: Transition from prototype-safe to production-safe defaults.
-last_action: Phase 0 baseline verified and tagged.
+last_action: P1·C1 disabled demo fallbacks by default (defaults + shim).
 ci_status: green
 agent_mode: true
 docs_version: 2025-10-16
-next_checkpoint: 1
+next_checkpoint: 2
 checkpoints:
   - id: P1C1
     title: Disable demo fallbacks by default
     risk: low
+    status: complete
   - id: P1C2
     title: Add CLI flags (--demo-fallbacks, --strict)
     risk: low
